# FdF

./: .gitignore  CMakeLists.txt  CMakeLists_Linux.txt  Makefile  README.md  author
FdF/: CMakeLists.txt  FdF
FdF/src/: FdF.h  Makefile  geometry.c  main.c  main2.c
FdF/src/libft/: Makefile  ft_arrnew.c  ft_free.c  ft_free2d.c  ft_free3d.c  ft_grbclct.c  ft_lstdel.c  ft_lstdelemp.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_memalloc.c  ft_memdel.c  ft_realloc.c  ft_strdel.c  ft_strdup.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c  ft_wrdcnt.c
FdF/src/libft/includes/: libft.h  libft.h.gch
FdF/test_maps/: 42.fdf
includes/: fdf.h
libft/: Makefile  ft_wrdcount.c
libft/includes/: libft.h
src/: choose_key.c  draw_line.c  draw_smooth_line.c  gradient.c  init_read.c  main.c  print.c  splitted_pixels.c  transformation.c
test_maps/: 2_5370978731043062750.fdf  421.fdf  42color.fdf  elem-col1.fdf  not_valid_map.fdf
